Alteracao do nome - CP

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /.vs/Clinica/FileContentIndex/989c1675-e1dd-4d09-a631-4575936a5a8d.vsidx
 /.vs/Clinica/FileContentIndex/989c1675-e1dd-4d09-a631-4575936a5a8d.vsidx
 /.vs/Clinica/FileContentIndex/989c1675-e1dd-4d09-a631-4575936a5a8d.vsidx
+/.vs/Clinica/FileContentIndex/ebdb3ae1-9871-4be0-8bc4-31b4bc56eda8.vsidx
